[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemies/turret.png" type="Texture" id=1]
[ext_resource path="res://enemies/turret/Turret.gd" type="Script" id=2]
[ext_resource path="res://weapons/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/turret/TurretBullet.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[node name="Turret" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Muzzle01" type="Position2D" parent="."]
position = Vector2( 25, -3 )

[node name="Muzzle02" type="Position2D" parent="."]
position = Vector2( 25, 3 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="PulseDelayTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Explosion" parent="." instance=ExtResource( 3 )]
frame = 0
[connection signal="area_entered" from="." to="." method="_on_Turret_area_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Explosion"]
